# TCC

./: .gitattributes  .gitignore  README.md  community.ipynb  create_json_sample.py  graph.ipynb  load_data.py  pyproject.toml  transform_data.py
data/: estimativa_dou_2024.ods
docs/: dashboard.html  index.html  tcc.html
docs/static/css/: style.css
docs/static/data/: brazil-states.geojson  communities.csv  county_info.csv  diag.csv
docs/static/js/: app.js  dashboard.js
notebooks/: community.ipynb
site/: app.js  index.html
site/static/data/: states_graph.csv
src/: agg_county_level.py  agg_state_level.py  community.py  convert_json.py  county_site_data.py  load_data.py  load_states_map.py  transform_data.py
