[project]
name = "tcc-sus"
version = "0.1.0"
description = ""
authors = [
    {name = "Vinícius Sousa",email = "vinicius.antunes@proton.me"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pysus (>=0.15.0,<0.16.0)",
    "jupyter (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
