[project]
name = "tcc-sus"
version = "0.1.0"
description = ""
authors = [
    {name = "Vinícius Sousa",email = "vinicius.antunes@proton.me"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pysus (>=0.15.0,<0.16.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "geopandas (>=1.0.1,<2.0.0)",
    "networkx (>=3.5,<4.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "odfpy (>=1.4.1,<2.0.0)",
    "geopy (>=2.4.1,<3.0.0)",
    "geobr (>=0.2.2,<0.3.0)",
    "scipy (>=1.16.0,<2.0.0)",
    "igraph (>=0.11.9,<0.12.0)",
    "leidenalg (>=0.10.2,<0.11.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
